crates/core/tests/integration/language/rust/snapshots/integration_tests__integration__language__rust__associated_function_and_ufcs_metrics.snap
---
source: crates/core/tests/integration/language/rust/mod.rs
expression: "serde_json :: to_string_pretty(& result).unwrap()"
---
{
  "file_path": "tests/integration/language/rust/fixtures/associated_function_and_ufcs.rs",
  "line_metrics": [
    {
      "line_number": 3,
      "total_dependencies": 1,
      "dependency_distance_cost": 0.08,
      "depth": 1,
      "transitive_dependencies": 1,
      "dependent_lines": [
        1
      ]
    },
    {
      "line_number": 4,
      "total_dependencies": 1,
      "dependency_distance_cost": 0.12,
      "depth": 1,
      "transitive_dependencies": 1,
      "dependent_lines": [
        1
      ]
    },
    {
      "line_number": 5,
      "total_dependencies": 1,
      "dependency_distance_cost": 0.16,
      "depth": 1,
      "transitive_dependencies": 1,
      "dependent_lines": [
        1
      ]
    },
    {
      "line_number": 15,
      "total_dependencies": 2,
      "dependency_distance_cost": 0.32,
      "depth": 1,
      "transitive_dependencies": 2,
      "dependent_lines": [
        13,
        9
      ]
    },
    {
      "line_number": 16,
      "total_dependencies": 1,
      "dependency_distance_cost": 0.24,
      "depth": 1,
      "transitive_dependencies": 1,
      "dependent_lines": [
        10
      ]
    },
    {
      "line_number": 22,
      "total_dependencies": 2,
      "dependency_distance_cost": 1.56,
      "depth": 2,
      "transitive_dependencies": 2,
      "dependent_lines": [
        4,
        1
      ]
    },
    {
      "line_number": 23,
      "total_dependencies": 2,
      "dependency_distance_cost": 0.68,
      "depth": 2,
      "transitive_dependencies": 3,
      "dependent_lines": [
        16,
        13
      ]
    },
    {
      "line_number": 24,
      "total_dependencies": 3,
      "dependency_distance_cost": 1.6,
      "depth": 1,
      "transitive_dependencies": 3,
      "dependent_lines": [
        13,
        10,
        9
      ]
    }
  ],
  "overall_complexity_score": 26.275999999999996
}
