crates/core/tests/integration/language/rust/snapshots/integration_tests__integration__language__rust__basic_metrics.snap
---
source: crates/core/tests/integration/language/rust/mod.rs
expression: "serde_json :: to_string_pretty(& result).unwrap()"
---
{
  "file_path": "tests/integration/language/rust/fixtures/basic_rust_code.rs",
  "line_metrics": [
    {
      "line_number": 2,
      "total_dependencies": 1,
      "dependency_distance_cost": 0.5,
      "depth": 1,
      "transitive_dependencies": 1,
      "dependent_lines": [
        1
      ]
    }
  ],
  "overall_complexity_score": 2.25
}
