crates/core/tests/integration/language/rust/snapshots/integration_tests__integration__language__rust__forward_reference_scope_metrics.snap
---
source: crates/core/tests/integration/language/rust/mod.rs
expression: "serde_json :: to_string_pretty(& result).unwrap()"
---
{
  "file_path": "tests/integration/language/rust/fixtures/forward_reference_scope.rs",
  "line_metrics": [
    {
      "line_number": 2,
      "total_dependencies": 1,
      "dependency_distance_cost": 0.029411764705882353,
      "depth": 1,
      "transitive_dependencies": 1,
      "dependent_lines": [
        3
      ]
    },
    {
      "line_number": 8,
      "total_dependencies": 1,
      "dependency_distance_cost": 0.14705882352941177,
      "depth": 1,
      "transitive_dependencies": 1,
      "dependent_lines": [
        3
      ]
    },
    {
      "line_number": 14,
      "total_dependencies": 1,
      "dependency_distance_cost": 0.058823529411764705,
      "depth": 1,
      "transitive_dependencies": 1,
      "dependent_lines": [
        12
      ]
    },
    {
      "line_number": 24,
      "total_dependencies": 1,
      "dependency_distance_cost": 0.14705882352941177,
      "depth": 1,
      "transitive_dependencies": 1,
      "dependent_lines": [
        19
      ]
    }
  ],
  "overall_complexity_score": 8.838235294117649
}
