crates/core/tests/integration/language/rust/snapshots/integration_tests__integration__language__rust__macro_invocation_dependency_ir.snap
---
source: crates/core/tests/integration/language/rust/mod.rs
expression: ir_snapshot_content
---
Source Code:
macro_rules! my_macro {
    ($e:expr) => {
        println!("{}", $e);
    };
}

fn main() {
    my_macro!("Hello, custom macro!");
}

AST:
(source_file
  (macro_definition
    name: (identifier "my_macro")
    (macro_rule
      left: (token_tree_pattern
        (token_binding_pattern
          name: (metavariable)
          type: (fragment_specifier)
        )
      )
      right: (token_tree
        (identifier "println")
        (token_tree
          (string_literal ""{}""
            (string_content)
          )
          (metavariable)
        )
      )
    )
  )
  (function_item
    name: (identifier "main")
    parameters: (parameters)
    body: (block
      (expression_statement
        (macro_invocation
          macro: (identifier "my_macro")
          (token_tree
            (string_literal ""Hello, custom macro!""
              (string_content)
            )
          )
        )
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "tests/integration/language/rust/fixtures/macro_invocation_dependency.rs",
    definitions: [
        Definition { position: { 1:14 to 1:22 }, name: "my_macro", definition_type: MacroDefinition, scope_id: Some(0), accessibility: Some(ScopeLocal), is_hoisted: Some(false) },
        Definition { position: { 2:6 to 2:8 }, name: "$e", definition_type: MacroVariableDefinition, scope_id: Some(0), accessibility: Some(ScopeLocal), is_hoisted: Some(false) },
        Definition { position: { 7:4 to 7:8 }, name: "main", definition_type: FunctionDefinition, scope_id: Some(1), accessibility: Some(ScopeLocal), is_hoisted: Some(false) },
    ],
    dependencies: [
        Dependency { source_line: 3, target_line: 2, symbol: "$e", dependency_type: MacroVariable, context: Some("Metavariable:3:24") },
        Dependency { source_line: 8, target_line: 1, symbol: "my_macro", dependency_type: MacroInvocation, context: Some("Identifier:8:5") },
    ],
    usage: [
        Usage { position: { 1:14 to 1:22 }, name: "my_macro", kind: Identifier, context: None },
        Usage { position: { 2:6 to 2:8 }, name: "$e", kind: Metavariable, context: None },
        Usage { position: { 3:9 to 3:16 }, name: "println", kind: Identifier, context: None },
        Usage { position: { 3:24 to 3:26 }, name: "$e", kind: Metavariable, context: None },
        Usage { position: { 8:5 to 8:13 }, name: "my_macro", kind: Identifier, context: None },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 9,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
