crates/core/tests/integration/language/rust/snapshots/integration_tests__integration__language__rust__method_call_dependency_metrics.snap
---
source: crates/core/tests/integration/language/rust/mod.rs
expression: "serde_json :: to_string_pretty(& result).unwrap()"
---
{
  "file_path": "tests/integration/language/rust/fixtures/method_call_dependency.rs",
  "line_metrics": [
    {
      "line_number": 5,
      "total_dependencies": 1,
      "dependency_distance_cost": 0.2857142857142857,
      "depth": 1,
      "transitive_dependencies": 1,
      "dependent_lines": [
        1
      ]
    },
    {
      "line_number": 7,
      "total_dependencies": 1,
      "dependency_distance_cost": 0.35714285714285715,
      "depth": 1,
      "transitive_dependencies": 1,
      "dependent_lines": [
        2
      ]
    },
    {
      "line_number": 12,
      "total_dependencies": 2,
      "dependency_distance_cost": 1.5,
      "depth": 1,
      "transitive_dependencies": 2,
      "dependent_lines": [
        2,
        1
      ]
    },
    {
      "line_number": 13,
      "total_dependencies": 2,
      "dependency_distance_cost": 0.5714285714285714,
      "depth": 2,
      "transitive_dependencies": 4,
      "dependent_lines": [
        12,
        6
      ]
    }
  ],
  "overall_complexity_score": 12.87142857142857
}
