crates/core/tests/integration/language/rust/snapshots/integration_tests__integration__language__rust__path_qualified_call_dependency_ir.snap
---
source: crates/core/tests/integration/language/rust/mod.rs
expression: ir_snapshot_content
---
Source Code:
mod m { pub fn f() {} }
m::f();


AST:
(source_file
  (mod_item
    name: (identifier "m")
    body: (declaration_list
      (function_item
        (visibility_modifier)
        name: (identifier "f")
        parameters: (parameters)
        body: (block)
      )
    )
  )
  (expression_statement
    (call_expression
      function: (scoped_identifier "m::f"
        path: (identifier "m")
        name: (identifier "f")
      )
      arguments: (arguments)
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "tests/integration/language/rust/fixtures/path_qualified_call_dependency.rs",
    definitions: [
        Definition { position: { 1:5 to 1:6 }, name: "m", definition_type: ModuleDefinition, scope_id: Some(1), accessibility: Some(ScopeLocal), is_hoisted: Some(false) },
        Definition { position: { 1:16 to 1:17 }, name: "f", definition_type: FunctionDefinition, scope_id: Some(2), accessibility: Some(ScopeLocal), is_hoisted: Some(false) },
    ],
    dependencies: [
        Dependency { source_line: 2, target_line: 1, symbol: "m", dependency_type: ModuleReference, context: Some("Identifier:2:1") },
        Dependency { source_line: 2, target_line: 1, symbol: "f", dependency_type: FunctionCall, context: Some("Identifier:2:4") },
    ],
    usage: [
        Usage { position: { 2:1 to 2:2 }, name: "m", kind: Identifier, context: Some("scoped_identifier") },
        Usage { position: { 2:4 to 2:5 }, name: "f", kind: Identifier, context: Some("scoped_identifier") },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 2,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
